<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_body"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context="com.example.android.popcornmovies_a1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/lost_conection_layout"
        android:layout_height="100dp"
        android:gravity="center"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lostInternetConnection"
            android:textColor="@color/white"
            android:lines="2"
            android:textSize="15sp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            tools:ignore="RtlHardcoded" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:id="@+id/start_again"
            android:text="@string/reconnect"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_main"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/start_load_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/shadow"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noInternetConnction"
            android:textColor="@color/white"
            android:textSize="30sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/reconnect"
            android:text="@string/reconnect"/>
    </LinearLayout>
</LinearLayout>


