<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="start"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:background="@color/black">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_details_title"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_details_poster"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/Poster" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_details_genre"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"

            android:textColor="@color/white"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_details_language"
            android:textColor="@color/white"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_details_release_date"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_details_votes"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_details_popularity"
                android:textColor="@color/white"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_details_mature"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:text="@string/mature"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/overview"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_details_overview"
            android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>
